--- a/app/src/main/res/layout/activity_draw_graph.xml
+++ b/app/src/main/res/layout/activity_draw_graph.xml
@@ -23,6 +23,7 @@
         android:layout_weight="3">
 
         <walden.com.opengl_es_test.GraphView
+            android:background="#ddd"
             android:id="@+id/glView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
